--- a/example/index.html
+++ b/example/index.html
@@ -39,6 +39,9 @@
                         }
                     ]
                 };
+                setTimeout(function () {
+                    console.log($scope.$echartsInstance);
+                }, 5000)
             }]);
 </script>
 </body>
